Feature #19668 Add configuration file for list of supported licenses
https://redmine.biodiversity.agr.gc.ca/issues/19668

SupportedLicenses.yml
* language is now a key instead of value

License.java
* titles now stored in hashmap where key = lang

SupportedLicensesConfiguration, SupportedLicensesConfigurationTest
* updated classes